# hw_qa_guru_16_poetry

./: README.md  pyproject.toml
